{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerLeft",
            "id": "1a766703-3c47-4127-8639-d09693ca07de",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "97a3e919-f530-46df-96dc-b46f71949025",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "5c4ea2ce-d879-4557-bd65-f8fedb442167",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e401407-ace0-4f12-86c3-348634611074",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a19d464-07cf-41a5-850c-9cf5cbdc07f9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerRight",
            "id": "405f1c1a-34e9-4b09-a9cd-d8caba8c41d4",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "1a62eb82-76bc-4c0d-bdf5-3c996da97505",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "e60360ff-ead1-4e69-ae40-344346c59a8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52d791fd-da20-43a9-ab2e-dbb85fb5a7fa",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a8b72b2-9d22-4f7b-8e7f-9ddee3a093c9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "30ac4f80-a8b2-4599-86f9-b43a5529a18b",
            "actions": [
                {
                    "name": "StartRace",
                    "type": "Button",
                    "id": "cee2f315-d467-4975-ae97-dafd96239db1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a541445-f992-4d8c-9245-4eae652aeaf9",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartRace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}